working on the 'add' functionality almost finished, just working on the add row method

--- a/app/views/events/live_entry.html.erb
+++ b/app/views/events/live_entry.html.erb
@@ -18,7 +18,7 @@
 		</div>
 	</div>
 </div>
-<div class="row form-split-wrapper">
+<div class="row form-split-wrapper js-form-wrapper">
 	<div class="col-xs-4 live-entry">
 		<form id="js-add-effort-form">
 			<div class="form-group clearfix">
@@ -52,8 +52,8 @@
 				<p class="col-xs-8 message">Enter * if data is not clear</p>
 			</div>
 			<div class="col-xs-8 col-xs-offset-4">
-				<input type="hidden" name="effort-id" id="js-effort-id" value="">
-				<input type="hidden" name="live-bib" id="js-live-bib" value="">
+				<input type="hidden" name="effortId" id="js-effort-id" value="werd">
+				<input type="hidden" name="liveBib" id="js-live-bib" value="true">
 				<button type="submit" class="btn btn-primary" id="js-add-to-cache">Add</button>
 			</div>
 		</form>
