I've forgotten by this point. But Splits, Google Maps, Confirmation, and some other stuff.

--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -22,11 +22,10 @@
 	}
 }
 
-.form-time-select {
-	.form-control.hours {
-		width: 50%;
-	}
-	.form-control.minutes {
-		width: 50%;
+/* There has to be a better way */
+.form-control-fill {
+	display: table;
+	& > * {
+		display: table-cell;
 	}
 }
