--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -10,30 +10,70 @@
 			<p><span class="brackets"><a>Cancel</a></span></p>
 	</aside>
 	<article class="col-xs-12 col-sm-8">
-	Event Info
 		<div class="form-group">
 			<label for="event-name">What is your event called?</label>
-			<input type="text" class="form-control" id="event-name" placeholder="Your event name">
+			<input type="text" class="form-control" id="event-name" placeholder="Your event name" v-model="eventData.event.name">
 		</div>
 		<div class="form-group">
 			<label for="event-description">Description</label>
-			<textarea class="form-control" id="event-description" placeholder="Your event's description"></textarea>
+			<textarea class="form-control" id="event-description" placeholder="Your event's description" v-model="eventData.event.description"></textarea>
 		</div>
 		<div class="form-horizontal">
 			<label for="event-start-time">Start Time of Race</label>
 			<div class="form-group">
-				<div class="col-xs-9">
-					<input type="text" class="form-control" id="event-start-time" placeholder="mm/dd/yyyy"></input>
+				<div class="col-xs-5 col-sm-7 col-md-8">
+					<input type="text" class="form-control" id="event-start-time" placeholder="mm/dd/yyyy" v-model="eventData.event.date"></input>
 				</div>
-				<div class="col-xs-3 form-time-select">
-					<select class="form-control" id="event-start-time">
-						<option>06 AM</option>
-					</select>:
-					<select class="form-control" id="event-start-time">
-						<option>00</option>
+				<div class="col-xs-7 col-sm-5 col-md-4 form-control-fill">
+					<select class="form-control" id="event-start-time" v-model="eventData.event.hours">
+						<option v-for="h in 12" :value="h">{{ h | padding( 2, '0' ) }} AM</option>
+						<option v-for="h in 12" :value="( h + 12 ) % 24">{{ h | padding( 2, '0' ) }} PM</option>
+					</select>
+					<span class="text-center">&nbsp;:&nbsp;</span>
+					<select class="form-control" id="event-start-time" v-model="eventData.event.minutes">
+						<option v-for="m in 12" :value="( m - 1 ) * 5 | padding( 2, '0' )">{{ ( m - 1 ) * 5 | padding( 2, '0' ) }}</option>
 					</select>
 				</div>
 			</div>
+		</div>
+		<div class="form-horizontal">
+			<label for="event-start-time">Select Course</label>
+			<div class="form-group">
+				<div class="col-xs-12 col-sm-6 col-md-8">
+					<select class="form-control" id="event-start-time" :disabled="eventData.course.new">
+						<option selected disabled>Select One</option>
+					</select>
+				</div>
+				<div class="col-xs-12 col-sm-6 col-md-4 form-control-fill">
+					<span class="text-center" style="width: 100%">or</span>
+					<button type="button" class="btn btn-success" v-on:click="eventData.course.new = true">Add New Course&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
+				</div>
+			</div>
+		</div>
+		<div class="well well-sm row" v-show="eventData.course.new">
+			<div class="form-group col-xs-12">
+				<label for="event-name">Course Name</label>
+				<input type="text" class="form-control" id="event-name" placeholder="Your event name">
+			</div>
+			<div class="form-group col-xs-12">
+				<label for="event-name">Course Name</label>
+				<input type="text" class="form-control" id="event-name" placeholder="Your event name">
+			</div>
+			<div class="form-group col-xs-6">
+				<label for="event-name">Course Name</label>
+				<input type="text" class="form-control" id="event-name" placeholder="Your event name">
+			</div>
+			<div class="form-group col-xs-6">
+				<label for="event-name">Course Name</label>
+				<input type="text" class="form-control" id="event-name" placeholder="Your event name">
+			</div>
+			<div class="form-group col-xs-12">
+				<label for="event-description">Description</label>
+				<textarea class="form-control" id="event-description" placeholder="Your event's description"></textarea>
+			</div>
+		</div>
+		<div class="row">
+			<router-link to="/splits" class="btn btn-primary">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 		</div>
 	</article>
 </div></script>
@@ -48,8 +88,44 @@
 		</p>
 	</aside>
 	<article class="col-xs-12 col-sm-8">
-		Splits
+		
+		<h2><strong>Your Splits:</strong></h2>
+		<div class="row">
+			<google-map :markers="eventData.splits"></google-map>
+		</div>
+		<div class="row">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th colspan="2">Name</th>
+						<th>Dist.</th>
+						<th>V. Gain</th>
+						<th>V. Loss</th>
+						<th colspan="2">Location Info</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr v-for="split in eventData.splits">
+						<td></td>
+						<td>{{ split.name }}</td>
+						<td>{{ split.distance }}</td>
+						<td>{{ split.verticalGain }}</td>
+						<td>{{ split.verticalLoss }}</td>
+						<td><a data-toggle="modal" data-target="#js-split-modal" v-on:click="modalSplit = split; modalNew = false">Edit Split</a></td>
+						<td><i class="glyphicon glyphicon-remove-circle"></i></td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+		<div class="row">
+			<p class="pull-left">
+				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-split-modal" v-on:click="modalSplit = {}; modalNew = true">Add New Split&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
+				<button type="button" class="btn btn-default">Import GPX File</button>
+			</p>
+			<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+		</div>
 	</article>
+	<split-modal :isNew="modalNew" :split="modalSplit" v-on:new="eventData.splits.push( modalSplit )"></split-modal>
 </div></script>
 
 <script type="text/x-template" id="participants"><div>
@@ -62,7 +138,36 @@
 		</p>
 	</aside>
 	<article class="col-xs-12 col-sm-8">
-		Participants
+		<div class="row">
+			<table class="table table-striped">
+				<thead>
+					<tr>
+						<th colspan="2">Name</th>
+						<th>Dist.</th>
+						<th>V. Gain</th>
+						<th>V. Loss</th>
+						<th colspan="2">Location Info</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr v-for="participant in eventData.participants">
+						<td></td>
+						<td>{{ participant.name }}</td>
+						<td>{{ participant.gender }}</td>
+						<td>{{ participant.birth }}</td>
+						<td>{{ participant.location }}</td>
+						<td>{{ participant.bibnumber }}</td>
+						<td><a data-toggle="modal" data-target="#js-split-modal" v-on:click="modalSplit = split; modalNew = false">Edit Split</a></td>
+						<td><i class="glyphicon glyphicon-remove-circle"></i></td>
+					</tr>
+				</tbody>
+			</table>
+			<p class="pull-left">
+				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-participant-modal" v-on:click="">Add New Particpant&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
+				<button type="button" class="btn btn-default">Import CSV</button>
+			</p>
+			<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+		</div>
 	</article>
 </div></script>
 
@@ -72,11 +177,58 @@
 		<p>Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
 		<p>
 			<router-link to="/participants" class="btn btn-default"><i class="glyphicon glyphicon-arrow-left"></i>&nbsp;Previous</router-link>
-			<router-link to="/published" class="btn btn-primary">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+			<router-link to="/published" class="btn btn-primary">Publish&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 		</p>
 	</aside>
 	<article class="col-xs-12 col-sm-8">
-		Confirmation
+		<table class="table">
+			<tbody>
+				<tr>
+					<th>Race Name</th>
+					<td>{{ eventData.event.name }}</td>
+					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td>
+				</tr>
+				<tr>
+					<th>Start Date</th>
+					<td>{{ eventData.event.date }} {{ eventData.event.hours % 12 }}:{{ eventData.event.minutes }}</td>
+					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td>
+				</tr>
+				<tr>
+					<th>Description</th>
+					<td>{{ eventData.event.description }}</td>
+					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td>
+				</tr>
+				<tr>
+					<th>Course</th>
+					<td>{{ eventData.course.name }}</td>
+					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td></tr>
+				<tr>
+					<th>Distance</th>
+					<td>NaN</td>
+					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td></tr>
+				<tr>
+					<th>Vertical Gain</th>
+					<td>NaN</td>
+					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td></tr>
+				<tr>
+					<th>Vertical Loss</th>
+					<td>NaN</td>
+					<td><span class="brackets"><router-link to="/">Edit</router-link></span></td></tr>
+				<tr>
+					<th>Your Splits</th>
+					<td><google-map :markers="eventData.splits"></google-map></td>
+					<td><span class="brackets"><router-link to="/splits">Edit</router-link></span></td>
+				</tr>
+				<tr>
+					<th>Participants<br>{{ eventData.participants.length }}</th>
+					<td></td>
+					<td><span class="brackets"><router-link to="/participants">Edit</router-link></span></td>
+				</tr>
+			</tbody>
+		</table>
+		<div class="row">
+			<router-link to="/splits" class="btn btn-primary pull-right">Publish&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
+		</div>
 	</article>
 </div></script>
 
@@ -86,29 +238,101 @@
 	</article>
 </div></script>
 
+<!-- Vue.js Split Modal -->
+
+<script type="text/x-template" id="split-modal">
+	<div id="js-split-modal" class="modal fade" tabindex="-1" role="dialog">
+		<div class="modal-dialog modal-lg" role="document">
+			<div class="modal-content">
+				<div class="modal-body row">
+					<div class="col-xs-6">
+						<h2><template v-if="isNew">Add A New Split</template><template v-else>Edit Split</template></h2>
+						<div class="form-group col-xs-6">
+							<label for="split-name">Split Name</label>
+							<input type="text" class="form-control" id="split-name" v-model="split.name" placeholder="Name">
+						</div>
+						<div class="form-group col-xs-6">
+							<label for="split-description">Description</label>
+							<input type="text" class="form-control" id="split-description" v-model="split.description" placeholder="Describe your split">
+						</div>
+						<div class="form-group col-xs-6">
+							<label for="split-name">Distance From Start</label>
+							<input type="text" class="form-control" id="split-name" v-model="split.distance" placeholder="miles">
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Split Type</label>
+							<label class="radio"><input type="radio" name="split-type">Time In</label>
+							<label class="radio"><input type="radio" name="split-type">Time In and Out</label>
+						</div>
+						<div class="form-group col-xs-6">
+							<label for="split-vgain">Vertical Gain From Start</label>
+							<input type="text" class="form-control" id="split-vgain" v-model="split.verticalGain" placeholder="feet">
+						</div>
+						<div class="form-group col-xs-6">
+							<label for="split-vloss">Vertical Loss From Start</label>
+							<input type="text" class="form-control" id="split-vloss" v-model="split.verticalLoss" placeholder="feet">
+						</div>
+						<h3><template v-if="isNew">Add Location</template><template v-else>Edit Location</template></h3>
+						<div class="form-horizontal">
+							<label for="split-loc-name">Name of Location</label>
+							<div class="form-group">
+								<div class="col-xs-12 form-control-fill">
+									<input type="text" class="form-control" id="split-loc-name" placeholder="Create A New Location">
+									<span class="text-center">or</span>
+									<select class="form-control">
+										<option selected disabled>Select An Existing One</option>
+									</select>
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-xs-4">
+							<label for="split-lat">Latitude</label>
+							<input type="text" class="form-control" id="split-lat" v-model="split.lat" placeholder="">
+						</div>
+						<div class="form-group col-xs-4">
+							<label for="split-lng">Longitude</label>
+							<input type="text" class="form-control" id="split-lng" v-model="split.lng" placeholder="">
+						</div>
+						<div class="form-group col-xs-4">
+							<label for="split-elevation">Elevation</label>
+							<input type="text" class="form-control" id="split-elevation" placeholder="">
+						</div>
+						<div class="row">
+							<span class="brackets" data-dismiss="modal" v-if="isNew"><a>Cancel</a></span>
+							<button type="button" class="btn btn-primary" data-dismiss="modal" v-on:click="$emit('new')" :disabled="isValid">
+								<template v-if="isNew">Add Split</template><template v-else>Done</template>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</script>
+
 <!-- Vue.js Applet -->
 
-<div id="app">
+<div id="event-app">
 	<div class="container-fluid header">
 		<div class="container">
 		  <div class="row">
 		  <h2><strong>Create Race</strong></h2>
-	  		<nav class="progress-bar-nav col-xs-12">
-	  			<ul>
-	  				<li is="router-link" to="/" tag="li" exact><a>Your Event</a></li>
-	  				<li is="router-link" to="/splits" tag="li"><a>Splits</a></li>
-	  				<li is="router-link" to="/participants" tag="li"><a>Participants</a></li>
-	  				<li is="router-link" to="/confirmation" tag="li"><a>Confirmation</a></li>
-	  				<li is="router-link" to="/published" tag="li"><a>Published</a></li>
-	  			</ul>
-	  		</nav>
+			<nav class="progress-bar-nav col-xs-12">
+				<ul>
+					<li is="router-link" to="/" tag="li" exact><a>Your Event</a></li>
+					<li is="router-link" to="/splits" tag="li"><a>Splits</a></li>
+					<li is="router-link" to="/participants" tag="li"><a>Participants</a></li>
+					<li is="router-link" to="/confirmation" tag="li"><a>Confirmation</a></li>
+					<li is="router-link" to="/published" tag="li"><a>Published</a></li>
+				</ul>
+			</nav>
 		  </div>
 		</div>
 	</div>
 
 	<div class="container">
 		<div class="row">
-			<div is="router-view"></div>
+			<div is="router-view" v-bind:event-data="eventData"></div>
 		</div>
 	</div>
 </div>
