--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -9,6 +9,13 @@ $white: #FFF;
 $red: pink;
 $blue: #2A9FD8;
 
+$break-small: 480px;
+$break-medium: 768px;
+$break-large: 960px;
+$break-xl: 1800px;
+$max-width: 1200px;
+
+
 /* Copied from bootstrap source */
 $state-info-text:                #31708f !default;
 $state-info-bg:                  #d9edf7 !default;
