--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -2,7 +2,7 @@
 
 <!-- Vue.js Form Templates-->
 
-<script type="text/x-template" id="event">
+<script type="text/x-template" id="event"><div>
 	<aside class="col-xs-12 col-sm-4 full-bg">
 			<h3><strong>Provide More Information About Your Event</strong></h3>
 			<p>Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
