Fixed reactivity bugs. Fixed lightbox bugs. Fixed routing bugs. Added participant lightbox.

--- a/app/assets/stylesheets/event-stage.css.scss
+++ b/app/assets/stylesheets/event-stage.css.scss
@@ -29,6 +29,11 @@
 		padding-top: 50px;
 		background: $white;
 	}
+
+	.modal-body .modal-section {
+		clear: both;
+		background: $lightGray;
+	}
 }
 
 /* There has to be a better way */
