--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -116,6 +116,31 @@ label.switchery-label {
 	}
 }
 
+
+/***********
+Help Tooltip Icon
+************/
+.help-tooltip {
+	display: inline-block;
+	font-size: 16px;
+	position: relative;
+
+	&:before {
+		display: block;
+		content: '';
+		background: $white;
+		margin: 0.1em;
+		height: 0.8em;
+		width: 0.8em;
+		position: absolute;
+		border-radius: 50%;
+	}
+
+	i {
+		color: $blue;
+	}
+}
+
 /***********
 Progress Bar Navigation
 ************/
