--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -4,7 +4,10 @@
 
 <script type="text/x-template" id="event"><div>
 	<aside class="col-xs-12 col-sm-4 full-bg">
-			<h3><strong>Provide More Information About Your Event</strong></h3>
+			<h3>
+				<span class="help-tooltip pull-right" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+				<strong>Provide More Information About Your Event</strong>
+			</h3>
 			<p>Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
 			<p><router-link to="/splits" class="btn btn-primary">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link></p>
 			<p><span class="brackets"><a>Cancel</a></span></p>
@@ -12,17 +15,20 @@
 	<article class="col-xs-12 col-sm-8">
 		<div class="form-group">
 			<label for="event-name">What is your event called?</label>
+			<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 			<input type="text" class="form-control" id="event-name" placeholder="Your event name" v-model="eventData.event.name">
 		</div>
 		<div class="form-group">
 			<label for="event-description">Description</label>
+			<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 			<textarea class="form-control" id="event-description" placeholder="Your event's description" v-model="eventData.event.description"></textarea>
 		</div>
 		<div class="form-group">
 			<label for="event-start-time">Start Time of Race</label>
+			<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 			<div class="row">
 				<div class="col-xs-5 col-sm-7 col-md-8">
-					<input type="text" class="form-control" id="event-start-time" placeholder="mm/dd/yyyy" v-model="eventData.event.date"></input>
+					<input type="text" class="form-control" id="event-start-time" v-model="eventData.event.date" v-mask="'m/d/y'" placeholder="mm/dd/yyyy"></input>
 				</div>
 				<div class="col-xs-7 col-sm-5 col-md-4 form-control-fill">
 					<select class="form-control" id="event-start-time" v-model="eventData.event.hours">
@@ -31,13 +37,14 @@
 					</select>
 					<span class="text-center">&nbsp;:&nbsp;</span>
 					<select class="form-control" id="event-start-time" v-model="eventData.event.minutes">
-						<option v-for="m in 12" :value="( m - 1 ) * 5 | padding( 2, '0' )">{{ ( m - 1 ) * 5 | padding( 2, '0' ) }}</option>
+						<option v-for="m in 12" :value="( m - 1 ) * 5">{{ ( m - 1 ) * 5 | padding( 2, '0' ) }}</option>
 					</select>
 				</div>
 			</div>
 		</div>
 		<div class="form-group">
 			<label for="event-start-time">Select Course</label>
+			<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 			<div class="row">
 				<div class="col-xs-12 col-sm-6 col-md-8">
 					<select class="form-control" id="event-start-time" :disabled="eventData.course.new">
@@ -54,10 +61,12 @@
 			<div class="row">
 				<div class="form-group col-xs-12">
 					<label for="event-name">Course Name</label>
+					<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 					<input type="text" class="form-control" id="event-name" placeholder="Your event name">
 				</div>
 				<div class="form-group col-xs-12">
 					<label for="event-name">Course Name</label>
+					<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 					<input type="text" class="form-control" id="event-name" placeholder="Your event name">
 				</div>
 				<div class="form-group col-xs-6">
@@ -70,6 +79,7 @@
 				</div>
 				<div class="form-group col-xs-12">
 					<label for="event-description">Description</label>
+					<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
 					<textarea class="form-control" id="event-description" placeholder="Your event's description"></textarea>
 				</div>
 			</div>
@@ -84,7 +94,10 @@
 
 <script type="text/x-template" id="splits"><div>
 	<aside class="col-xs-12 col-sm-4 full-bg">
-		<h3><strong>Provide A List of All The Splits In Your Event</strong></h3>
+		<h3>
+			<span class="help-tooltip pull-right" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+			<strong>Provide A List of All The Splits In Your Event</strong>
+		</h3>
 		<p>Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
 		<p>
 			<router-link to="/" class="btn btn-default"><i class="glyphicon glyphicon-arrow-left"></i>&nbsp;Previous</router-link>
@@ -92,21 +105,37 @@
 		</p>
 	</aside>
 	<article class="col-xs-12 col-sm-8">
-		
-		<h2><strong>Your Splits:</strong></h2>
+		<h2>
+			<strong>Your Splits:</strong>
+			<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+		</h2>
 		<div class="row">
-			<google-map :markers="eventData.splits"></google-map>
+			<google-map :markers="eventData.splits" :location="modalSplit"></google-map>
 		</div>
 		<div class="row">
 			<data-tables :rows="eventData.splits" v-on:edit="modalSplit = $event; modalNew = false">
 				<tr slot="header">
+					<th></th>
 					<th>Name</th>
-					<th>Dist.</th>
-					<th>V. Gain</th>
-					<th>V. Loss</th>
-					<th colspan="2" data-orderable="false">Location Info</th>
+					<th>
+						Dist.
+						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+					</th>
+					<th>
+						V. Gain
+						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+					</th>
+					<th>
+						V. Loss
+						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+					</th>
+					<th colspan="2" data-orderable="false">
+						Location Info
+						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+					</th>
 				</tr>
 				<template slot="row" scope="vm">
+					<td><i class="glyphicon glyphicon-flag"></i></td>
 					<td>{{ vm.row.name }}</td>
 					<td>{{ vm.row.distance }}</td>
 					<td>{{ vm.row.verticalGain }}</td>
@@ -129,7 +158,10 @@
 
 <script type="text/x-template" id="participants"><div>
 	<aside class="col-xs-12 col-sm-4 full-bg">
-		<h3><strong>Provide A List of Your Participants</strong></h3>
+		<h3>
+			<span class="help-tooltip pull-right" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+			<strong>Provide A List of Your Participants</strong>
+		</h3>
 		<p>Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
 		<p>
 			<router-link to="/splits" class="btn btn-default"><i class="glyphicon glyphicon-arrow-left"></i>&nbsp;Previous</router-link>
@@ -144,26 +176,114 @@
 					<th>M/F</th>
 					<th>DoB.</th>
 					<th>Location</th>
-					<th>Bib&num;</th>
+					<th>
+						Bib&num;
+						<span class="help-tooltip" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+					</th>
 					<th data-orderable="false">&nbsp;</th>
 				</tr>
 				<template slot="row" scope="vm">
-					<td><input type="text" v-model="vm.row.name"></td></td>
-					<td>{{ vm.row.name }}</td>
-					<td></td>
-					<td></td>
+					<td>{{ vm.row.first }} {{ vm.row.last }}</td>
+					<td>{{ vm.row.gender }}</td>
+					<td>{{ vm.row.dob }}</td>
+					<td>{{ vm.row.city }}, {{ vm.row.state }}</td>
 					<td><a data-toggle="modal" data-target="#js-participant-modal" v-on:click="vm.$emit('edit')">Edit Participant</a></td>
 					<td><a v-on:click="vm.$emit('remove')">Delete</a></td>
 				</template>
 			</data-tables>
 			<p class="pull-left">
-				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-participant-modal" v-on:click="eventData.participants.push( { name: 'Somebody' } )">Add New Particpant&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
+				<button type="button" class="btn btn-success" data-toggle="modal" data-target="#js-participant-modal" v-on:click="modalData = blank()">Add New Particpant&nbsp;<i class="glyphicon glyphicon-plus"></i></button>
 				<button type="button" class="btn btn-default">Import CSV</button>
 			</p>
 			<router-link to="/splits" class="btn btn-primary pull-right">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link>
 		</div>
 	</article>
-	<participant-modal :isNew="modalNew" :participant="modalData" v-on:new=""></participant-modal>
+	<!-- <participant-modal :isNew="modalNew" :participant="modalData" v-on:new=""></participant-modal> -->
+	<edit-modal v-model="modalData" :validator="isValid" v-on:done="!( modalData._dtid ) && eventData.participants.push( modalData )" inline-template>
+		<div id="js-participant-modal" tabindex="-1" role="dialog" class="modal fade">
+			<div class="modal-dialog" role="document">
+				<div class="modal-content">
+					<div class="modal-body clearfix">
+						<div class="form-group col-xs-12">
+							<label>Select Course</label>
+							<div class="row">
+								<div class="form-group col-xs-6">
+									<input type="text" class="form-control" v-model="model.first" placeholder="First Name"></input>
+								</div>
+								<div class="form-group col-xs-6">
+									<input type="text" class="form-control" v-model="model.last" placeholder="Last Name"></input>
+								</div>
+							</div>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Gender</label>
+							<label class="radio"><input type="radio" name="gender" value="M" v-model="model.gender">Male</label>
+							<label class="radio"><input type="radio" name="gender" value="F" v-model="model.gender">Female</label>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Date of Birth</label>
+							<input type="text" class="form-control" v-model="model.dob" v-mask="'m/d/y'" placeholder="mm/dd/yyyy"></input>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Bib Number</label>
+							<input type="text" class="form-control" v-model="model.bibnumber" v-mask.insert="{ mask: '9{1,6}', placeholder: '' }"placeholder="example: 1234"></input>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Beacon URL</label>
+							<input type="text" class="form-control" v-model="model.beacon" placeholder="http://example.com"></input>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Email</label>
+							<input type="text" class="form-control" v-model="model.email" placeholder="example@gmail.com"></input>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Phone Number</label>
+							<input type="text" class="form-control" v-model="model.phone" v-mask="'(999) 999 - 9999'" placeholder="(xxx) xxx - xxxx"></input>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>City</label>
+							<input type="text" class="form-control" v-model="model.city" placeholder="Louisville"></input>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>State</label>
+							<input type="text" class="form-control" v-model="model.state" placeholder="Colorado"></input>
+						</div>
+						<div class="form-group col-xs-6">
+							<label>Country</label>
+							<input type="text" class="form-control" v-model="model.country" placeholder="United States"></input>
+						</div>
+						<div class="row modal-section">
+							<div class="col-xs-12">
+								<div class="form-group col-xs-7">
+									<label>Participant's Start Time</label>
+									<input type="text" class="form-control" v-model="model.startdate" v-mask="'m/d/y'" placeholder="mm/dd/yyyy"></input>
+									<select class="form-control" id="event-start-time" v-model="model.starthours">
+										<option v-for="h in 12" :value="h">{{ h | padding( 2, '0' ) }} AM</option>
+										<option v-for="h in 12" :value="( h + 12 ) % 24">{{ h | padding( 2, '0' ) }} PM</option>
+									</select>
+									<span class="text-center">&nbsp;:&nbsp;</span>
+									<select class="form-control" id="event-start-time" v-model="model.startminutes">
+										<option v-for="m in 12" :value="( m - 1 ) * 5">{{ ( m - 1 ) * 5 | padding( 2, '0' ) }}</option>
+									</select>
+								</div>
+								<div class="form-group col-xs-5">
+									<label>Start Time Offset</label>
+									<input type="text" class="form-control" v-model="model.startoffset" v-mask="{ alias: 'hh:mm', placeholder: 'hh:mm' }" placeholder="Offset Amount"></input>
+								</div>
+							</div>
+						</div>
+						<div class="col-xs-12">
+							<span class="brackets" data-dismiss="modal"><a>Cancel</a></span>
+							<button type="button" class="btn btn-primary" data-dismiss="modal" v-bind:disabled="valid" v-on:click="$emit('done')">
+								<template v-if="!model._dtid">Add Participant</template>
+								<template v-else>Done</template>
+							</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</edit-modal>
 </div></script>
 
 <script type="text/x-template" id="confirmation"><div>
@@ -338,7 +458,7 @@
 		  </div>
 		</div>
 	</div>
-
+	
 	<div class="container">
 		<div class="row">
 			<div is="router-view" v-bind:event-data="eventData"></div>
