--- a/app/assets/stylesheets/variables.css.scss
+++ b/app/assets/stylesheets/variables.css.scss
@@ -3,8 +3,10 @@ Variables
 ************/
 $gray: #777;
 $mediumGray: #aaa;
+
 $lightGray: #eee;
 $darkGray: #222;
+$darkerGray: #E1E1E1;
 $white: #FFF;
 $red: pink;
 $blue: #2A9FD8;
