--- a/app/views/stage/index.html.erb
+++ b/app/views/stage/index.html.erb
@@ -4,13 +4,13 @@
 
 <script type="text/x-template" id="event"><div>
 	<aside class="col-xs-12 col-sm-4 full-bg">
-			<h3>
-				<span class="help-tooltip pull-right" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
-				<strong>Provide More Information About Your Event</strong>
-			</h3>
-			<p>Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-			<p><router-link to="/splits" class="btn btn-primary">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link></p>
-			<p><span class="brackets"><a>Cancel</a></span></p>
+		<h3>
+			<span class="help-tooltip pull-right" data-toggle="static-popover" data-placement="bottom" data-content="Bacon ipsum dolor amet spare ribs cow prosciutto beef ribs venison. Sirloin bacon kielbasa chuck hamburger ball tip venison strip steak bresaola pork chop kevin."><i class="glyphicon glyphicon-question-sign"></i></span>
+			<strong>Provide More Information About Your Event</strong>
+		</h3>
+		<p>Etiam porta sem malesuada magna mollis euismod. Maecenas faucibus mollis interdum. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+		<p><router-link to="/splits" class="btn btn-primary">Continue&nbsp;<i class="glyphicon glyphicon-arrow-right"></i></router-link></p>
+		<p><span class="brackets"><a>Cancel</a></span></p>
 	</aside>
 	<article class="col-xs-12 col-sm-8">
 		<div class="form-group">
@@ -547,9 +547,8 @@
 <div id="event-app">
 	<div class="container-fluid header">
 		<div class="container">
-		  <div class="row">
-		  <h2><strong>Create Race</strong></h2>
-			<nav class="progress-bar-nav col-xs-12">
+			<h2><strong>Create Race</strong></h2>
+			<nav class="progress-bar-nav">
 				<ul>
 					<li is="router-link" to="/" tag="li" exact><a>Your Event</a></li>
 					<li is="router-link" to="/splits" tag="li"><a>Splits</a></li>
@@ -558,7 +557,6 @@
 					<li is="router-link" to="/published" tag="li"><a>Published</a></li>
 				</ul>
 			</nav>
-		  </div>
 		</div>
 	</div>
 	
