--- a/app/assets/stylesheets/utilities.css.scss
+++ b/app/assets/stylesheets/utilities.css.scss
@@ -232,43 +232,32 @@ Progress Bar Navigation
 			&:last-child {
 
 				&:before {
-					display: block;
 					content: '\e013';
 					color: $white;
 					padding-top: 5px;
 					width: map-get( $progress-bar-nav, 'bubble-height' ) * 1.5;
 					height: map-get( $progress-bar-nav, 'bubble-height' ) * 1.5;
 					border-radius: map-get( $progress-bar-nav, 'bubble-height' );
-					background: $darkerGray;
-					position: absolute;
 					font-family: 'Glyphicons Halflings';
 					top: -.35em;
-					transition: background 0.6s ease-in-out;
+					right: -( map-get( $progress-bar-nav, 'bubble-height' ) * 1.5 / 2 );
 					text-align: center;
 				}
 
 				a {
 					&:before {
-						display: block;
 						content: '\e013';
 						color: $white;
-						position: absolute;
-						top: 0;
 						padding-top: 5px;
-						left: 50%;
 						width: map-get( $progress-bar-nav, 'bubble-height' ) * 1.5;
 						height: map-get( $progress-bar-nav, 'bubble-height' ) * 1.5;
 						top: -.35em;
 						border-radius: map-get( $progress-bar-nav, 'bubble-height' );
-						margin-left: -( map-get( $progress-bar-nav, 'bubble-height' ) );
-						@include transform( scale( 1 ) );
-						background: $blue;
-						transition: transform 0.3s ease-in-out;
+						margin-left: -( map-get( $progress-bar-nav, 'bubble-height' ) / 1.5 );
 						text-align: center;
 						font-family: 'Glyphicons Halflings';
 					}
 				}
-
 			}
 
 			a {
